--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #cookie {
     width: 200px;
     height: 200px;
-    background-color: #3CA0C7;
+    background-color: #e6ac00;
     border-radius: 50%;
 }
